  (Andrew Bennetts, #506274)

* FTP transports support Unicode paths by encoding/decoding them as utf8.
  (Vincent Ladeuil, #472161)

* Give a clearer message if the lockdir disappears after being apparently
  successfully taken.  (Martin Pool, #498378)

* Listen to the SIGWINCH signal to update the terminal width.
  (Vincent Ladeuil, #316357)

* The 2a format wasn't properly restarting autopacks when something
  changed underneath it (like another autopack). Now concurrent
  autopackers will properly succeed. (John Arbash Meinel, #495000)

* When operations update the working tree, all affected files should end
  up with the same mtime. (eg. when versioning a generated file, if you
  update the source and the generated file together, the generated file
  should appear up-to-date.)
  (John Arbash Meinel, Martin <gzlist>, #488724)

Improvements
************

* Added ``add_cleanup`` and ``cleanup_now`` to ``bzrlib.command.Command``.
  All the builtin commands now use ``add_cleanup`` rather than
  ``try``/``finally`` blocks where applicable as it is simpler and more
  robust.  (Andrew Bennetts)

* Push will now inform the user when they are trying to push to a foreign 
  VCS for which roundtripping is not supported, and will suggest them to 
  use dpush. (Jelmer Vernooij)

* The version of bzr being run is now written to the log file.
  (__monty__, #257170)

* Transport network activity indicator is shown more of the time when
  Bazaar is doing network IO.
  (Martin Pool)

Documentation
*************

* Improved help for ``bzr send``. 
  (Martin Pool, Bojan Nikolic)

* There is a System Administrator's Guide in ``doc/en/admin-guide``,
  including discussions of installation, relevant plugins, security and 
  backup. (Neil Martinsen-Burrell)

* The ``conflicts`` help topic has been renamed to ``conflict-types``.
  (Ian Clatworthy)

* The User Reference is now presented as a series of topics.
  Many of the included topics have link and format tweaks applied.